--- a/pages/templates/pages/page_list.html
+++ b/pages/templates/pages/page_list.html
@@ -2,6 +2,7 @@
 {% load static %}
 {% block title %}Páginas{% endblock %}
 {% block content %}
+{% include 'pages/includes/pages_menu.html' %}
 <main role="main">
   <div class="container mb-4">
     {% for page in page_list %}
