Makes ckeditor textarea responsive.

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -12,6 +12,7 @@
     <link href="{% static 'core/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'core/vendor/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static 'core/css/main.css' %}" rel="stylesheet">
+    <link href="{% static 'pages/css/custom_ckeditor.css' %}" rel="stylesheet">
   </head>
   <body>
     <body>
