--- a/pages/templates/pages/page_update_form.html
+++ b/pages/templates/pages/page_update_form.html
@@ -5,23 +5,20 @@
 {% include 'pages/includes/pages_menu.html'%}
 <main role="main">
   <div class="container">
-    <div class="row mt-3">
+    <div class="row mb-5">
       <div class="col-md-9 mx-auto">
-        <div>
-            {% if 'ok' in request.GET %}
-              <p style="color: green;">Pagina editada correctamente.
-              <a href={% url 'pages:page' page.id page.title|slugify %}>
-                Haz click aqui
-              </a> para ver el resultado</p>
-            {% endif %}
-            <form action="" method="post">{% csrf_token %}
-                <table>
-                    {{ form.as_table }}
-                </table>
-                <br>
-                <input type="submit" value="Editar página" />
-            </form>
-        </div>
+        {% if 'ok' in request.GET %}
+          <p style="color: green;">Pagina editada correctamente.
+          <a href={% url 'pages:page' page.id page.title|slugify %}>
+            Haz click aqui
+          </a> para ver el resultado</p>
+        {% endif %}
+        <form action="" method="post">{% csrf_token %}
+          {{ form.as_p }}
+          <div class="text-center">
+            <input type="submit" class="btn btn-primary btn-block" value="Editar página" />
+          </div>
+        </form>
       </div>
     </div>
   </div>
