--- a/pages/templates/pages/page_confirm_delete.html
+++ b/pages/templates/pages/page_confirm_delete.html
@@ -5,14 +5,14 @@
 {% include 'pages/includes/pages_menu.html'%}
 <main role="main">
   <div class="container">
-    <div class="row mt-3">
+    <div class="row mb-5">
       <div class="col-md-9 mx-auto">
         <div>
-            <form method="post">
-                {% csrf_token %}
-              <p>¿Estás seguro de que quieres borrar "{{ object }}"?</p>
-              <input type="submit" value="Sí, borrar la página" />
-            </form>
+          <form method="post">
+            {% csrf_token %}
+            <p>¿Estás seguro de que quieres borrar <b>"{{ object }}"</b>?</p>
+            <input type="submit" class="btn btn-danger" value="Sí, borrar la página" />
+          </form>
         </div>
       </div>
     </div>
