--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -34,9 +34,15 @@
             </ul>
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="/admin/">
-                  {% if request.user.is_staff %}Admin{% else %}Acceder{% endif %}
+                {% if not request.user.is_authenticated %}
+                <a class="nav-link" href="{% url 'login' %}">
+                  Acceder
                 </a>
+                {% else %}
+                <a class="nav-link" href="{% url 'logout' %}">
+                  Cerrar sesión
+                </a>
+                {% endif %}
               </li>
             </ul>
           </div>
