--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -33,17 +33,24 @@
               </li>
             </ul>
             <ul class="navbar-nav">
+              {% if not request.user.is_authenticated %}
               <li class="nav-item">
-                {% if not request.user.is_authenticated %}
+                <a class="nav-link" href="{% url 'signup' %}">
+                  Registrarse
+                </a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="{% url 'login' %}">
                   Acceder
                 </a>
-                {% else %}
+              </li>
+              {% else %}
+              <li class="nav-item">
                 <a class="nav-link" href="{% url 'logout' %}">
                   Cerrar sesión
                 </a>
-                {% endif %}
               </li>
+              {% endif %}
             </ul>
           </div>
         </div>
