--- a/registration/templates/registration/login.html
+++ b/registration/templates/registration/login.html
@@ -12,6 +12,9 @@
   <div class="container">
     <div class="row mt-3">
       <div class="col-md-9 mx-auto mb-5">
+        {% if 'registered' in request.GET %}
+        <p class="text-success">Usuario registrado.</p>
+        {% endif %}
         <form action="" method="post">
           {% csrf_token %}
           <h3 class="mb-4">Iniciar sesión</h3>
@@ -50,6 +53,7 @@
             />
           </p>
         </form>
+        <a href={% url 'signup' %}>Crear usuario.</a>
       </div>
     </div>
   </div>
