--- a/registration/templates/registration/login.html
+++ b/registration/templates/registration/login.html
@@ -53,7 +53,8 @@
             />
           </p>
         </form>
-        <a href={% url 'signup' %}>Crear usuario.</a>
+        <p><a href={% url 'signup' %}>Crear usuario.</a></p>
+        <p><a href={% url 'password_reset' %}>Olvidé mi contraseña.</a></p>
       </div>
     </div>
   </div>
