--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -46,6 +46,11 @@
               </li>
               {% else %}
               <li class="nav-item">
+                <a class="nav-link" href="{% url 'profile' %}">
+                  Perfil
+                </a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="{% url 'logout' %}">
                   Cerrar sesión
                 </a>
