--- a/registration/templates/registration/profile_form.html
+++ b/registration/templates/registration/profile_form.html
@@ -7,7 +7,7 @@
     <div class="row mb-5">
       <div class="col-md-9 mx-auto">
         <h3>Editar perfil</h3>
-        <form action="" method="post">
+        <form action="" method="post" enctype="multipart/form-data">
           {% csrf_token %}
           {{ form.as_p }}
           <div class="text-center">
