--- a/registration/templates/registration/profile_form.html
+++ b/registration/templates/registration/profile_form.html
@@ -33,6 +33,7 @@
               {{ form.link }}
               <input type="email" value="{{request.user.email}}" class="form-control mt-3" readonly>
               <p class="mt-3">Si desea modificar su email haga click <a href="{% url 'profile_email' %}">aquí</a>.</p>
+              <p class="mt-3">Si desea modificar su contraseña haga click <a href="{% url 'password_change' %}">aquí</a>.</p>
               <input type="submit" class="btn btn-primary btn-block mt-3" value="Actualizar">
             </div>
           </div>
